Fix main nav overlap on dark theme mobile
For smaller mobile browsers sizes like 375px wide, on dark theme,
the main nav overlaps the search box.  Raising the z-index of the
search box fixes the issue in the simplest way in the short term.

A better long term fix rather than relying on z-index is to rework
the element sizing and padding, and remove the blanket cascading
background color definition for dark theme.

Additionally, center the search box slightly.

--- a/share/static/css/elevator-light/nav.css
+++ b/share/static/css/elevator-light/nav.css
@@ -209,10 +209,10 @@ ul.sf-menu li {
     position: absolute;
     background: transparent;
     top: 0;
-    right: 18em;
+    right: 17.75em;
     width: auto;
     font-size: 0.9em;
-    z-index: 99;
+    z-index: 1000;
 }
 
 #topactions input[type="search"] {
